Create a personal web

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
         <link rel="stylesheet" href="styles.css" />
         <body>
             <h1>
-                Samya Ahsan
+                Science Academy
             </h1>
             <p>
-                Will code for food
+                <i>America's future engineers</i>
             </p>
-            <img src="http://d2trtkcohkrm90.cloudfront.net/images/emoji/apple/ios-10/256/potato.png">
+            <img class = "img-circle" src="https://farm2.static.flickr.com/1231/1352237002_8c415b4d10_m.jpg">
+           
+
         </body>
+        
     </head>
-</html>
+</html> 
+
